Added the required jars and bookings pages

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ WebContent/images/.svn/
 WebContent/META-INF/.svn/
 
 WebContent/js/.svn/
+
+WebContent/WEB-INF/.svn/
+
+WebContent/WEB-INF/lib/.svn/
